src/App.css
#root {
  flex: 1 1 auto;
  align-self: stretch; /* take up the entire space of <body> */
  background-color: #ffffff;
  --editor-theme-color: #c5050c;
  --input-background-color: #dcdcdc;
  --achievement-background-color: #333333;
  --outline-color: #333333;
  --menu-background-color: #353839;
  --side-background-color: #2b2e43;
  --main-text-color: #2b2e43;
  --viewer-background-color: #989898;
  --pdf-width: calc(31vw);
  --pdf-height: calc(1.417 * var(--pdf-width));
}

#screen {
  display: flex;
}

/* editor on the left side */
#editor {
  width: 50vw;
  display: flex;
  flex-direction: column;
  align-self: stretch;
  padding: 5vh 0 10vw 0;
  gap: 2.5vh;

  /* editor header */
  > h1 {
    font-family: "Red Hat Display";
    text-align: center;
    padding: 1rem 0 1rem 0;
    font-size: 2rem;
    margin: 0;
    background-color: var(--editor-theme-color);
    color: white;
  }

  /* editor body */
  > div {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 0 5vw 0 5vw;
  }
}

#viewer {
  display: flex;
  flex-direction: column;
  width: 50vw;
  height: 100vh;
  position: fixed;
  right: 0;
  background-color: var(--viewer-background-color);

  > #menu {
    background-color: var(--menu-background-color);
    height: 4.5%;
    display: flex;
    justify-content: center;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;

    > button {
      padding: 0;
      border: 0;
      background-color: var(--menu-background-color);

      > img {
        width: 24px;
        height: 24px;
      }
    }
  }

  > #viewer-body {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: flex-end;

    > #pdf {
      display: flex;
      width: var(--pdf-width);
      height: var(--pdf-height);

      background-color: white;

      > #side {
        flex: 5;
        display: flex;
        flex-direction: column;
        background-color: var(--side-background-color);
      }

      > #main {
        flex: 9;
      }
    }
  }
}

#personal-details,
#experience,
#skills,
#education,
#achievements {
  h1 {
    font-family: "Red Hat Display";
    font-size: 1.5rem;
    color: black;
    margin-bottom: 0;
  }

  hr {
    border-color: var(--editor-theme-color);
    margin-bottom: 1rem;
  }

  button {
    background-color: white;
    padding: 0;
    height: 25px;

    img {
      width: 25px;
      height: 25px;
    }
  }

  form {
    font-family: "Red Hat Text";
    display: flex;
    flex-direction: column;
    gap: 0.375rem;

    button {
      align-self: center;
    }

    .container {
      display: flex;
      gap: 1rem;

      .card {
        color: black;
        flex: 1 1 0; /* There is difference between 1 1 0 and 1 1 auto */
        display: flex;
        flex-direction: column;

        input,
        textarea {
          flex: 1 1 auto;
          font-family: "Red Hat Text";
          color: black;
          background-color: var(--input-background-color);
          border-radius: 5px;
          border: 0;
          padding: 0.375rem 0.5rem 0.375rem 0.5rem;
        }

        input:focus,
        input:hover,
        textarea:focus,
        textarea:hover {
          outline: 2px solid #333333;
        }
      }
    }
  }
}

#personal-details {
  .container#picture {
    align-self: center;
  }
}

#experience,
#education {
  button {
    color: black;
  }

  .panel {
    font-family: "Red Hat Text";
    display: flex;
    padding: 10px;
    margin-top: 5px;
    margin-bottom: 10px;
    align-items: center;
    border: 2px solid grey;
    border-radius: 10px;
    color: black;

    div {
      flex: 1 1 0;
      font-weight: 500;

      h3 {
        margin: 0;
      }
    }
  }

  #card-container {
    display: flex;
    justify-content: space-between;
    gap: 15px;
  }
}

#skills {
  button {
    color: black;
  }

  form .container {
    display: flex;

    .category {
      flex: 3;
    }

    .skill {
      flex: 7;
    }

    input {
      font-family: "Red Hat Text";
      color: black;
      background-color: var(--input-background-color);
      border-radius: 5px;
      border: 0;
      padding: 0.375rem 0.5rem 0.375rem 0.5rem;
      margin-bottom: 0.5rem;
    }

    button {
      margin-bottom: 0.5rem;
    }

    input:focus,
    input:hover {
      outline: 2px solid var(--outline-color);
    }
  }
}

#achievements {
  input {
    width: 200px;
    font-family: "Red Hat Text";
    color: black;
    background-color: var(--input-background-color);
    border-radius: 5px;
    border: 0;
    padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  }

  input:focus,
  input:hover {
    outline: 2px solid var(--outline-color);
  }

  .container {
    margin-top: 1rem;
    display: block;
  }

  button {
    background-color: var(--achievement-background-color);
    color: white;
    padding: 5px 20px;
    margin: 3px 12px 3px 0;
    text-align: center;
    display: inline-flex;
    align-items: center;
  }

  button:hover {
    text-decoration: line-through;
  }
}

#view-picture {
  height: 100px;
  width: 100px;
  border-radius: 50%;
  margin: 35px auto;
}

#view-contact,
#view-achievements {
  color: white;
  margin-left: 20%;

  h2 {
    font-size: 1rem;
    border-bottom: 2px solid white;
    margin: 0;
  }

  ul {
    list-style: none;
    padding: 0;

    li {
      display: flex;
      flex-direction: column;
      font-size: 0.625rem;
      font-weight: 800;

      span {
        font-weight: 200;
        font-size: 0.45rem;
      }
    }
  }
}

#view-intro,
#view-experience,
#view-education,
#view-skills {
  color: var(--main-text-color);
  padding-top: 8%;
  padding-left: 5%;
  padding-right: 5%;

  h1 {
    font-size: 1.35rem;
    letter-spacing: 0.2rem;
    font-weight: 900;
    margin: 0;
    span {
      font-weight: 500;
    }
  }

  h2 {
    font-size: 0.9rem;
    letter-spacing: 0.1rem;
    margin: 0;
  }

  p {
    font-size: 0.45rem;
    margin: 0;
  }
}

#view-experience,
#view-education {
  padding-top: 1rem;

  h1 {
    font-size: 1rem;
    padding-bottom: 0.2rem;
    border-bottom: 1.25px solid var(--main-text-color);
    letter-spacing: 0;
  }

  .container {
    margin-top: 0.5rem;

    h2 {
      font-size: 0.75rem;
      letter-spacing: 0;
      font-weight: 800;
    }

    .date {
      font-size: 0.6rem;
      font-weight: 600;
    }

    .location {
      font-size: 0.5rem;
      font-weight: 400;
    }
  }
}

#view-skills {
  padding-top: 1rem;

  h1 {
    font-size: 1rem;
    padding-bottom: 0.2rem;
    border-bottom: 1.25px solid var(--main-text-color);
    letter-spacing: 0;
  }

  ul {
    list-style: none;
    padding-left: 0;
    margin-top: 0.5rem;
    text-decoration: underline;
    margin-bottom: 0;

    li {
      display: grid;
      grid-template-columns: 45% 55%;
      font-size: 0.5rem;
      font-weight: 800;
      margin-bottom: 0.1rem;

      span {
        font-weight: 300;
      }
    }
  }
}

